14_python_app_debugging/app_deployment_exit_status1.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: python-demo-app
  name: python-demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-demo-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: python-demo-app
    spec:
      containers:
      - command: ['sh', '-c', 'echo Lets begin! && sleep 5 && exit 1']
        image: kumina/python-demo-app:9
        imagePullPolicy: Always
        name: python-demo-app
        ports:
        - containerPort: 80
          name: web
          protocol: TCP
        - containerPort: 8080
          name: metrics
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz/live
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
