14_python_app_debugging/app_deployment_no_image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: python-demo-app
  name: python-demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-demo-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: python-demo-app
    spec:
      containers:
        - image: registry.workshop.kumina.net/common/demo-app:9999
          imagePullPolicy: Always
          name: python-demo-app
          ports:
            - containerPort: 80
              name: web
              protocol: TCP
            - containerPort: 8080
              name: metrics
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz/live
              port: 80
            initialDelaySeconds: 5
            timeoutSeconds: 5
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /healthz/ready
              port: 80
            initialDelaySeconds: 5
            timeoutSeconds: 5
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
